--- a/css/cardstarter copy.css
+++ b/css/cardstarter copy.css
@@ -311,7 +311,7 @@
   background-image: url("../images/jokers/joker-red.svg"); }
 
 .card.back {
-  background-image: url("../images/backs/blue.svg"); }
+  background-image: url("../images/backs/cardBack.jpg"); }
 
 .card.back-blue {
   background-image: url("../images/backs/blue.svg"); }
