--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 body {
   cursor: url('<http://www.rw-designer.com/cursor-set/wand>'),auto,  !important;
+  font-family: 'Gideon Roman', cursive;
+  font-family: 'Oranienbaum', serif;
+  font-family: 'PT Serif', serif;
 }
 h1 {
 
