--- a/css/style.css
+++ b/css/style.css
@@ -13,19 +13,25 @@ html {
 }
 body {
   cursor: url('../assets/WandD.cur'), auto  !important;
-
   font-family: 'Gideon Roman', cursive;
   font-family: 'Oranienbaum', serif;
   font-family: 'PT Serif', serif;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 }
 h1 {
   align-items: center;
+  background-color: brown;
+  display: flex;
+  flex-direction: row;
+  height: 100px;
+  justify-content: center;
 }
 
-h3{
+body > h3:last-child{
 align-items: center;
+background-color: blue;
+margin-left: auto;
 }
 .gameOver {
   align-self: center;
@@ -34,27 +40,50 @@ align-items: center;
 .battlefield {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  flex: 200px;
-
-
+  flex-basis: 100%;
+  flex: 2;
+  column-gap: 30px; 
+  width: 100%;
+  /* flex-wrap: wrap; */
+  /* justify-content: space-between; */
+  /* flex: 200px; */
 }
-/* #deckBF1 {
-  flex: 1 200px;
+
+#deckBF1 {
+  flex: 1 auto;
+  flex-direction: wrap; 
 }
 #deckBF2 {
-  flex: 2 200px;
+  flex: 1 auto;
+  flex-direction: wrap;
 }
 #deck-start1 {
-  flex: 3 200px;
+flex: 2 auto;
+flex-direction: flex-end;
 }
 #deck-start2 {
-  flex: 4 200px;
-}  */
+  flex: 2 auto;
+  flex-direction: flex-end;
+}
 
 .gameOver {
   display: flex;
   background-color: red;
 }
 
+
+
+@media only screen and (min-width: 600px){
+  body {
+  width: 900px;
+  /* display: grid;
+  grid-template-columns: 40% 60%;
+  grid-template-rows: auto auto auto auto;
+      /* designing the grid - will apply to properties later*/
+  /* grid-template-areas: 
+    "status name"
+    "img occupation"
+    "img brand"
+    "contact offer"; */ */
+  }
+}
