--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 
 h1 {
   align-items: center;
-  background-color: brown;
+  /* background-color: brown; */
   display: flex;
   flex-direction: row;
   height: 100px;
