--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,29 @@ html {
   font-size: 62.5%;
 }
 body {
+  background-color: #201d1d; 
+}
+
+.board {
   cursor: url('../assets/WandD.cur'), auto  !important;
   font-family: 'Gideon Roman', 'Oranienbaum', 'PT Serif', system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
-  justify-content: center;
-  background-image: url("../assets/castle-fire.jpeg");
-  background-color: #cccccc; 
+  background-image: url("../assets/castle-fire.jpeg"); 
+  background-repeat: no-repeat;
+  border-radius: 8px;
+  display: flex;
+  height: 100vh;
+  width: auto;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
   align-items: center;
+  color: #c43b16;
+  font-style: bold;
+  font-weight: 700;
   display: flex;
   flex-direction: row;
   height: 100px;
@@ -53,6 +65,14 @@ div.players {
   justify-content: space-around;
   -ms-flex-align: center;
 }
+div.replay {
+  align-items: center; 
+  display: flex;
+  flex-direction: row;
+  height: 100px;
+  justify-content: space-around;
+  -ms-flex-align: center;
+}
 
 .battlefield {
   display: flex;
@@ -63,14 +83,19 @@ div.players {
   width: 100%;
 }
 
-.gameOver {
-  /* flex: ; */
-  /* text: black; */
-  /* display: flex; */
-  /* justify-content: center; */
-  /* text: gold; */
-  /* text-shadow: white, 30px; */
-  /* background-color: red; */
+#gameOverBtn {
+  outline: 50px black;
+  background-color: #f7de71;
+  align-content: space-around;
+  flex-flow: row;
+  height: 50px;
+  width: 80px;
+}
+
+#deck-start1:hover {
+  transition: width 2s, height 4s transform 2s;
+  transition-timing-function: ease;
+  /* width: 300px; */
 }
 
 @media only screen and (min-width: 600px){
