--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
   font-family: 'Gideon Roman', 'Oranienbaum', 'PT Serif', system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
-  background-image: url("../assets/castle-fire.jpeg"); 
+  background-image: url("../assets/castleFire2.jpeg"); 
   background-repeat: no-repeat;
   border-radius: 8px;
   display: flex;
