--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,15 @@ h1 {
   justify-content: center;
 }
 h3 {
-  align-items: center;
+  background-color: gray;
+  outline-width: 15px;
+  border-color: black;
   align-items: center;
   display: flex;
   flex-direction: row;
-  height: 100px;
+  height: 30px;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 div.battle {
@@ -72,6 +75,14 @@ div.replay {
   height: 100px;
   justify-content: space-around;
   -ms-flex-align: center;
+}
+h6 {
+  display: flex;
+  justify-content: space-between;
+
+  border-radius: 4px;
+  padding: 5px;
+  width: 500px;
 }
 
 .battlefield {
