--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,19 @@ body {
   align-items: center;
 }
 
+/* #HP {
+  background-image: url("../assets/HP.png");
+  width: 110px;
+  height: 100px;
+  z-index: 1;
+}
+
+#Malfoy{
+  background-image: url("../assets/Malfoy.jpeg");
+  width: 70px;
+  height: 100px;
+} */
+
 h1 {
   align-items: center;
   color: #c43b16;
@@ -40,6 +53,7 @@ h1 {
   height: 100px;
   justify-content: center;
 }
+
 h3 {
   background-color: gray;
   outline-width: 15px;
@@ -79,7 +93,6 @@ div.replay {
 h6 {
   display: flex;
   justify-content: space-between;
-
   border-radius: 4px;
   padding: 5px;
   width: 500px;
