--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,14 @@ html {
 *, 
 *::before, 
 *::after { 
-
   box-sizing: inherit;
 }
-
 :root {
   font-size: 62.5%;
 }
 body {
   background-color: #201d1d; 
 }
-
 .board {
   cursor: url('../assets/WandD.cur'), auto  !important;
   font-family: 'Gideon Roman', 'Oranienbaum', 'PT Serif', system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -29,20 +26,6 @@ body {
   flex-direction: column;
   align-items: center;
 }
-
-/* #HP {
-  background-image: url("../assets/HP.png");
-  width: 110px;
-  height: 100px;
-  z-index: 1;
-}
-
-#Malfoy{
-  background-image: url("../assets/Malfoy.jpeg");
-  width: 70px;
-  height: 100px;
-} */
-
 h1 {
   align-items: center;
   color: #c43b16;
@@ -53,7 +36,6 @@ h1 {
   height: 100px;
   justify-content: center;
 }
-
 h3 {
   background-color: gray;
   outline-width: 15px;
@@ -65,7 +47,6 @@ h3 {
   justify-content: center;
   margin-bottom: 50px;
 }
-
 div.battle {
   align-items: center; 
   display: flex;
@@ -92,12 +73,12 @@ div.replay {
 }
 h6 {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   border-radius: 4px;
   padding: 5px;
   width: 500px;
 }
-
 .battlefield {
   display: flex;
   flex-direction: column;
@@ -106,7 +87,6 @@ h6 {
   column-gap: 30px; 
   width: 100%;
 }
-
 #gameOverBtn {
   outline: 50px black;
   background-color: #f7de71;
@@ -115,20 +95,17 @@ h6 {
   height: 50px;
   width: 80px;
 }
-
 #deck-start1:hover {
   transition: width 2s, height 4s transform 2s;
   transition-timing-function: ease;
   /* width: 300px; */
 }
-
 @media only screen and (min-width: 600px){
   body {
   width: 900px;
   display: grid;
   grid-template-columns: 40% 60%;
   grid-template-rows: auto auto auto auto;
-      /* designing the grid - will apply to properties later */
   grid-template-areas: 
     "title"
     "message"
@@ -136,7 +113,6 @@ h6 {
     "players"
   }
 }
-
 .title {
   grid-area: title;
   text-align: center;
@@ -149,14 +125,12 @@ h6 {
   margin-top: auto;
   
 }
-
 #battlefield{
   grid-area: battlefield;
   text-align: center;
   justify-content: center;
   -ms-flex-align: center;
 }
-
 #players{
   grid-area: players;
   text-align: center;
